--- a/main.tex
+++ b/main.tex
@@ -269,6 +269,7 @@
 \DeclareMathOperator\Kom{Kom}
 \DeclareMathOperator\Mor{Mor}
 \DeclareMathOperator\cone{cone}
+\newcommand\tridot{\triangle\kern-1.42ex\raisebox{.13ex}{\scalebox{0.7}{$\bullet$}}}
 
 %
 \newcommand{\Resf}[1]{\big|_{#1}}
@@ -395,12 +396,12 @@
 \include{fields/week6}
 \include{fields/week7}
 \include{fields/week8}
+\fi
 \include{commutative/week9}
 \include{commutative/week10}
 \include{commutative/week11}
 \include{commutative/week12}
 \include{commutative/week13}
-\fi
 \include{homology/week14}
 \include{homology/week15}
 \include{homology/week16}
