--- a/main.tex
+++ b/main.tex
@@ -269,6 +269,7 @@
 \DeclareMathOperator\Kom{Kom}
 \DeclareMathOperator\Mor{Mor}
 \DeclareMathOperator\cone{cone}
+\DeclareMathOperator\cyl{cyl}
 \newcommand\tridot{\triangle\kern-1.42ex\raisebox{.13ex}{\scalebox{0.7}{$\bullet$}}}
 
 %
